# MetaTrader-5-MCP-Server

./: .gitignore  .pylintrc  CHANGELOG.md  EXAMPLES.md  FIXES_v0.2.1.md  FORECAST_EXAMPLES.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY_v0.4.0.md  MCP_SDK_COMPLIANCE.md  MT5_USAGE_GUIDE.md  QUICK_REFERENCE.md  QUICK_START_v0.4.0.md  README.md  TEST_GUIDE.md  USAGE.md  VSCODE_INTEGRATION.md  WHATS_NEW.md  WHATS_NEW_v0.3.0.md  pyproject.toml  test_commands.py  test_error_handling.py  test_ethusd.py  test_fix.py  test_server.py  test_vscode_integration.py
.github/workflows/: publish.yml
docs/: CHART_HYPERLINKS.md  LLM_MODEL_ANALYSIS.md  MT5_ANALYZE_QUICK_REFERENCE.md  TOOL_DESCRIPTION_UPDATE.md  XGBOOST_IMPLEMENTATION_SUMMARY.md  XGBOOST_ML_SIGNAL.md  XGBOOST_QUICK_REFERENCE.md
src/mt5_mcp/: __init__.py  __main__.py  connection.py  error_utils.py  errors.py  executor.py  gradio_server.py  handlers.py  models.py  server.py  validators.py
tests/: __init__.py  integration_test.py  manual_test.py  test_connection.py  test_executor.py  test_gradio_server.py  test_handlers.py
