[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mt5-mcp"
version = "0.4.0"
description = "MCP server for MetaTrader 5 with structured inputs and full library access"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "MetaTrader5>=5.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "ta>=0.11.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "prophet>=1.0.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0"
]

[project.scripts]
mt5-mcp = "mt5_mcp.__main__:main"
