[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mt5-mcp"
version = "0.5.1"
description = "MCP server for MetaTrader 5 with multi-transport support (stdio + HTTP/SSE via Gradio)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Cloudmeru"}
]
keywords = [
    "metatrader",
    "mt5",
    "mcp",
    "trading",
    "forex",
    "llm",
    "ai",
    "model-context-protocol"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "mcp>=0.9.0",
    "MetaTrader5>=5.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "ta>=0.11.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "prophet>=1.0.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0"
]

[project.optional-dependencies]
ui = [
    "gradio[mcp]>=6.0.0"
]
charting = [
    "plotly>=5.18.0"
]
all = [
    "gradio[mcp]>=6.0.0",
    "plotly>=5.18.0"
]

[project.urls]
Homepage = "https://github.com/Cloudmeru/Metatrader-5-MCP-Server"
Repository = "https://github.com/Cloudmeru/Metatrader-5-MCP-Server"
Changelog = "https://github.com/Cloudmeru/Metatrader-5-MCP-Server/blob/main/CHANGELOG.md"
Documentation = "https://github.com/Cloudmeru/Metatrader-5-MCP-Server/blob/main/USAGE.md"

[project.scripts]
mt5-mcp = "mt5_mcp.__main__:main"
mt5-mcp-stdio = "mt5_mcp.__main__:main"
mt5-mcp-http = "mt5_mcp.gradio_server:launch_gradio_mcp"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
ignore = ["E402"]
